--- a/index.html
+++ b/index.html
@@ -20,73 +20,38 @@
         </div>
 
         <div class="card-right">
-            <input type="text" class="city-search__input">
-            <button class="search__buttonbtn"><img src="/images/search.png"></button>
+            <div class="search-box">
+                <input type="text" class="city-search__input">
+                <button class="search__button"><img src="/images/search.png"></button>
+            </div>
 
-            <div>
-                
+            <div class="rows">
+                <div class="row-1">
+                    <img src="images/humidity.png" class="row-1 icon">
+                    <p class="row-1 key">Humidity:</p>
+                    <p class="row-1 value">58%</p>
+                </div>
+
+                <div class="row-2">
+                    <img src="images/wind.png" class="row-2 icon">
+                    <p class="row-2 key">Wind Speed:</p>
+                    <p class="row-2 value">14km/h</p>
+                </div>
+                <div class="row-3">
+                    <img src="images/thermometer.png" class="row-3 icon">
+                    <p class="row-3 key">Feels Like:</p>
+                    <p class="row-3 value">30°C</p>
+                </div>
+            </div>
+
+            <div class="bottom-row">
+                <img src="images/sunrise.png" class="sunrise-icon">
+                <img src="images/sunset.png" class="sunset-icon">
+                <p class="sunrise">05:00</p>
+                <p class="sunset">19:52</p>
             </div>
         </div>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <!-- <div class="card">
-        <div class="search">
-            <input type="text" placeholder="Enter city name" spellcheck="false">
-            <button><img src="images/search.png"></button>
-        </div>
-
-        <div class="weather">
-            <img src="images/rain.png" class="weather-icon">
-            <h1 class="temp">22°C</h1>
-            <h2 class="city">New York</h2>
-            <div class="details">
-                <div class="col">
-                    <img src="images/humidity.png">
-                    <div>
-                        <p class="humidity">50%</p>
-                        <p>humidity</p>
-                    </div>
-                </div>
-
-                <div class="col">
-                    <img src="images/wind.png">
-                    <div>
-                        <p class="wind">15 km/h</p>
-                        <p>Wind Speed</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div> -->
 
     <script src="script.js"></script>
 </body>
