--- a/index.html
+++ b/index.html
@@ -27,20 +27,26 @@
 
             <div class="rows">
                 <div class="row-1">
-                    <img src="images/humidity.png" class="row-1 icon">
-                    <p class="row-1 key">Humidity:</p>
-                    <p class="row-1 value">58%</p>
+                    <img src="images/humidity.png" class="icons row-1_icon">
+                    <div class="container">
+                        <p class="keys row-1_key">Humidity:</p>
+                        <p class="values row-1_value">58%</p>
+                    </div>
                 </div>
 
                 <div class="row-2">
-                    <img src="images/wind.png" class="row-2 icon">
-                    <p class="row-2 key">Wind Speed:</p>
-                    <p class="row-2 value">14km/h</p>
+                    <img src="images/wind.png" class="icons row-2_icon">
+                    <div class="container">
+                        <p class="keys row-2_key">Wind Speed:</p>
+                        <p class="values row-2_value">14km/h</p>
+                    </div>
                 </div>
                 <div class="row-3">
-                    <img src="images/thermometer.png" class="row-3 icon">
-                    <p class="row-3 key">Feels Like:</p>
-                    <p class="row-3 value">30°C</p>
+                    <img src="images/thermometer.png" class="icons row-3_icon">
+                    <div class="container">
+                        <p class="keys row-3_key">Feels Like:</p>
+                        <p class="values row-3_value">30°C</p>
+                    </div>
                 </div>
             </div>
 
