--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
             <h2 class="weather-temperature">28°C</h2>
             <p class="weather-description">cloudly</p>
             
-            <h1 class="city">Skopje</h1>
+            <h1 class="city">Los Angeles</h1>
         </div>
 
         <div class="card-right">
-            <div class="search-box">
-                <input type="text" class="city-search__input">
-                <button class="search__button"><img src="/images/search.png"></button>
-            </div>
+                <form>
+                    <input type="text" class="city-search__input">
+                    <button class="search__button" type="submit"><img src="/images/search.png"></button>
+                </form>
 
             <div class="rows">
                 <div class="row-1">
