--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <div class="card">
         <div class="card-left">
             <img src="/images/clouds.png" class="weather-icon">
-            <h2 class="weather-temperature">28°C</h2>
-            <p class="weather-description">cloudly</p>
+            <h2 class="weather-temperature"></h2>
+            <p class="weather-description"></p>
             
-            <h1 class="city">Los Angeles</h1>
+            <h1 class="city"></h1>
         </div>
 
         <div class="card-right">
